--- a/chrome/pageshot/manifest.json
+++ b/chrome/pageshot/manifest.json
@@ -1,5 +1,10 @@
 {
 	"name": "pageShot",
 	"version": "0.1",
-	"description": "pageShot addon"
+	"manifest_version" : 2,
+	"description": "pageShot addon",
+	"browser_action" : {
+		"default_icon" : "icon.png",
+		"popup" : "popup.html"
+	}
 }
